potential fix to issue #38 - shifted question box downwards

--- a/Checkmate2019/Base/static/css/question.css
+++ b/Checkmate2019/Base/static/css/question.css
@@ -60,7 +60,7 @@ table {
 	font-family: "VT323",Arial,Sans-serif;
 	position: absolute;
 	left:10vw;
-	top: 10vh;
+	top: 25vh;
 	height: 40vh;
 	width: 80vw;
 	background-color: black;
